@@ -5,7 +5,11 @@
  */
 package org.phoebus.olog;
 
+import jakarta.servlet.http.HttpServletRequest;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.tika.detect.Detector;
+import org.apache.tika.metadata.Metadata;
+import org.apache.tika.metadata.TikaCoreProperties;
 import org.phoebus.olog.entity.Attachment;
 import org.phoebus.olog.entity.Log;
 import org.phoebus.olog.entity.LogEntryGroupHelper;
@@ -15,8 +19,10 @@ import org.phoebus.olog.entity.SearchResult;
 import org.phoebus.olog.entity.Tag;
 import org.phoebus.olog.entity.preprocess.LogPropertyProvider;
 import org.phoebus.olog.entity.preprocess.MarkupCleaner;
+import org.phoebus.olog.entity.websocket.MessageType;
+import org.phoebus.olog.entity.websocket.WebSocketMessage;
 import org.phoebus.olog.notification.LogEntryNotifier;
-import org.phoebus.util.time.TimeParser;
+import org.phoebus.olog.websocket.WebSocketService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.InputStreamResource;
 import org.springframework.core.io.Resource;
@@ -42,20 +48,22 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
 
-import javax.servlet.http.HttpServletRequest;
+import java.io.BufferedInputStream;
+import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.security.Principal;
 import java.text.MessageFormat;
 import java.time.Duration;
 import java.time.Instant;
-import java.time.temporal.TemporalAmount;
-import java.time.temporal.UnsupportedTemporalTypeException;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.SortedSet;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.TimeUnit;
@@ -64,7 +72,7 @@ import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
 import static org.phoebus.olog.OlogResourceDescriptors.LOG_RESOURCE_URI;
-import static org.phoebus.util.time.TimestampFormats.MILLI_FORMAT;
+import static org.phoebus.util.time.TimestampFormats.MILLI_PATTERN;
 
 /**
  * Resource for handling the requests to ../logs
@@ -108,6 +116,13 @@ public class LogResource {
     @Autowired
     private Long propertyProvidersTimeout;
 
+    @SuppressWarnings("unused")
+    @Autowired
+    private WebSocketService webSocketService;
+
+    @Autowired
+    private Detector detector;
+
     /**
      * Custom HTTP header that client may send in order to identify itself. This is logged for some of the
      * endpoints in this controller.
@@ -118,7 +133,7 @@ public class LogResource {
 
     @GetMapping("{logId}")
     @SuppressWarnings("unused")
-    public Log getLog(@PathVariable String logId) {
+    public Log getLog(@PathVariable(name = "logId") String logId) {
         Optional<Log> foundLog = logRepository.findById(logId);
         if (foundLog.isPresent()) {
             return foundLog.get();
@@ -131,22 +146,25 @@ public class LogResource {
 
     @GetMapping("archived/{logId}")
     @SuppressWarnings("unused")
-    public SearchResult getArchivedLog(@PathVariable String logId) {
+    public SearchResult getArchivedLog(@PathVariable(name = "logId") String logId) {
         return logRepository.findArchivedById(logId);
     }
 
     @GetMapping("/attachments/{logId}/{attachmentName}")
-    public ResponseEntity<Resource> findResources(@PathVariable String logId, @PathVariable String attachmentName) {
+    public ResponseEntity<Resource> getAttachment(@PathVariable(name = "logId") String logId, @PathVariable(name = "attachmentName") String attachmentName) {
         Optional<Log> log = logRepository.findById(logId);
         if (log.isPresent()) {
             Set<Attachment> attachments = log.get().getAttachments().stream().filter(attachment -> attachment.getFilename().equals(attachmentName)).collect(Collectors.toSet());
             if (attachments.size() == 1) {
                 Attachment attachment = attachments.iterator().next();
                 this.logger.log(Level.INFO, () -> MessageFormat.format(TextUtil.ATTACHMENT_REQUEST_DETAILS, attachment.getId(), attachment.getFilename()));
-                Attachment foundAttachment = attachmentRepository.findById(attachment.getId()).get();
+                Optional<Attachment> attachmentOptional = attachmentRepository.findById(attachment.getId());
+                if (attachmentOptional.isEmpty()) {
+                    throw new ResponseStatusException(HttpStatus.NOT_FOUND, MessageFormat.format(TextUtil.ATTACHMENT_UNABLE_TO_RETRIEVE_FOR_ID, attachmentName, logId));
+                }
                 InputStreamResource resource;
                 try {
-                    resource = new InputStreamResource(foundAttachment.getAttachment().getInputStream());
+                    resource = new InputStreamResource(attachmentOptional.get().getAttachment().getInputStream());
                     ContentDisposition contentDisposition = ContentDisposition.builder("attachment")
                             .filename(attachmentName)
                             .build();
@@ -160,13 +178,16 @@ public class LogResource {
                 } catch (IOException e) {
                     Logger.getLogger(LogResource.class.getName())
                             .log(Level.WARNING, MessageFormat.format(TextUtil.ATTACHMENT_UNABLE_TO_RETRIEVE_FOR_ID, attachmentName, logId), e);
+                    throw new ResponseStatusException(HttpStatus.NOT_FOUND, MessageFormat.format(TextUtil.ATTACHMENT_UNABLE_TO_RETRIEVE_FOR_ID, attachmentName, logId));
+
                 }
             } else {
                 Logger.getLogger(LogResource.class.getName())
                         .log(Level.WARNING, () -> MessageFormat.format(TextUtil.ATTACHMENTS_NAMED_FOUND_FOR_ID, attachments.size(), attachmentName, logId));
+                throw new ResponseStatusException(HttpStatus.NOT_FOUND, MessageFormat.format(TextUtil.ATTACHMENT_UNABLE_TO_RETRIEVE_FOR_ID, attachmentName, logId));
             }
         }
-        return null;
+        throw new ResponseStatusException(HttpStatus.NOT_FOUND, MessageFormat.format(TextUtil.ATTACHMENT_UNABLE_TO_RETRIEVE_FOR_ID, attachmentName, logId));
     }
 
     /**
@@ -179,46 +200,31 @@ public class LogResource {
      * empty list if no matching logs are found.
      */
     @GetMapping()
-    @Deprecated
-    public List<Log> findLogs(@RequestHeader(value = OLOG_CLIENT_INFO_HEADER, required = false, defaultValue = "n/a") String clientInfo, @RequestParam MultiValueMap<String, String> allRequestParams) {
-        logSearchRequest(clientInfo, allRequestParams);
-        for (String key : allRequestParams.keySet()) {
-            if ("start".equalsIgnoreCase(key) || "end".equalsIgnoreCase(key)) {
-                String value = allRequestParams.get(key).get(0);
-                Object time = TimeParser.parseInstantOrTemporalAmount(value);
-                if (time instanceof Instant) {
-                    allRequestParams.get(key).clear();
-                    allRequestParams.get(key).add(MILLI_FORMAT.format((Instant) time));
-                } else if (time instanceof TemporalAmount) {
-                    allRequestParams.get(key).clear();
-                    allRequestParams.get(key).add(MILLI_FORMAT.format(Instant.now().minus((TemporalAmount) time)));
-                }
-            }
+    public ResponseEntity<?> findLogs(@RequestHeader(value = OLOG_CLIENT_INFO_HEADER, required = false, defaultValue = "n/a") String clientInfo, @RequestParam MultiValueMap<String, String> allRequestParams) {
+        ResponseEntity responseEntity = search(clientInfo, allRequestParams);
+        if (responseEntity.getStatusCode().equals(HttpStatus.OK)) {
+            return new ResponseEntity<>(((SearchResult) responseEntity.getBody()).getLogs(), HttpStatus.OK);
         }
-        return logRepository.search(allRequestParams).getLogs();
+        return responseEntity;
     }
 
+    /**
+     * Finds matching log entries based on the specified search parameters.
+     *
+     * @param clientInfo       A string sent by client identifying it with respect to version and platform.
+     * @param allRequestParams A map of search query parameters. Note that this method supports date/time expressions
+     *                         like "12 hours" or "2 days" as well as formatted strings like "2021-01-20 12:00:00.123".
+     *                         Search parameters considered invalid may result in an HTTP 400 (bad request) response.
+     * @return A {@link SearchResult} holding matching objects, if any.
+     */
     @GetMapping("/search")
-    public SearchResult search(@RequestHeader(value = OLOG_CLIENT_INFO_HEADER, required = false, defaultValue = "n/a") String clientInfo, @RequestParam MultiValueMap<String, String> allRequestParams) {
+    public ResponseEntity<?> search(@RequestHeader(value = OLOG_CLIENT_INFO_HEADER, required = false, defaultValue = "n/a") String clientInfo, @RequestParam MultiValueMap<String, String> allRequestParams) {
         logSearchRequest(clientInfo, allRequestParams);
-        for (String key : allRequestParams.keySet()) {
-            if ("start".equalsIgnoreCase(key) || "end".equalsIgnoreCase(key)) {
-                String value = allRequestParams.get(key).get(0);
-                Object time = TimeParser.parseInstantOrTemporalAmount(value);
-                if (time instanceof Instant) {
-                    allRequestParams.get(key).clear();
-                    allRequestParams.get(key).add(MILLI_FORMAT.format((Instant) time));
-                } else if (time instanceof TemporalAmount) {
-                    allRequestParams.get(key).clear();
-                    try {
-                        allRequestParams.get(key).add(MILLI_FORMAT.format(Instant.now().minus((TemporalAmount) time)));
-                    } catch (UnsupportedTemporalTypeException e) { // E.g. if client sends "months" or "years"
-                        throw new ResponseStatusException(HttpStatus.BAD_REQUEST, MessageFormat.format(TextUtil.UNSUPPORTED_DATE_TIME, value));
-                    }
-                }
-            }
+        try {
+            return new ResponseEntity<>(logRepository.search(allRequestParams), HttpStatus.OK);
+        } catch (IllegalArgumentException exception) {
+            return new ResponseEntity<>(exception.getMessage(), HttpStatus.BAD_REQUEST);
         }
-        return logRepository.search(allRequestParams);
     }
 
     /**
@@ -227,6 +233,10 @@ public class LogResource {
      * <p>
      * This may return a HTTP 400 if for instance <code>inReplyTo</code> does not identify an existing log entry,
      * or if the logbooks listed in the {@link Log} object contains invalid (i.e. non-existing) logbooks.
+     * </p>
+     * <p>
+     * Primary use case is upload of log entry without attachments as this type of request is easier to
+     * construct, i.e. client need not create a request with multipart items.
      * </p>
      *
      * @param clientInfo A string sent by client identifying it with respect to version and platform.
@@ -238,8 +248,8 @@ public class LogResource {
      */
     @PutMapping()
     public Log createLog(@RequestHeader(value = OLOG_CLIENT_INFO_HEADER, required = false, defaultValue = "n/a") String clientInfo,
-                         @RequestParam(value = "markup", required = false) String markup,
-                         @RequestParam(value = "inReplyTo", required = false, defaultValue = "-1") String inReplyTo,
+                         @RequestParam(name = "markup", required = false) String markup,
+                         @RequestParam(name = "inReplyTo", required = false, defaultValue = "-1") String inReplyTo,
                          @RequestBody Log log,
                          @AuthenticationPrincipal Principal principal) {
         if (log.getLogbooks().isEmpty()) {
@@ -272,6 +282,8 @@ public class LogResource {
         Log newLogEntry = logRepository.save(log);
         sendToNotifiers(newLogEntry);
 
+        webSocketService.sendMessageToClients(new WebSocketMessage(MessageType.NEW_LOG_ENTRY, null));
+
         logger.log(Level.INFO, () -> "Entry id " + newLogEntry.getId() + " created from " + clientInfo);
 
         return newLogEntry;
@@ -297,8 +309,8 @@ public class LogResource {
      */
     @PutMapping("/multipart")
     public Log createLog(@RequestHeader(value = OLOG_CLIENT_INFO_HEADER, required = false, defaultValue = "n/a") String clientInfo,
-                         @RequestParam(value = "markup", required = false) String markup,
-                         @RequestParam(value = "inReplyTo", required = false, defaultValue = "-1") String inReplyTo,
+                         @RequestParam(name = "markup", required = false) String markup,
+                         @RequestParam(name = "inReplyTo", required = false, defaultValue = "-1") String inReplyTo,
                          @RequestPart("logEntry") Log logEntry,
                          @RequestPart(value = "files", required = false) MultipartFile[] files,
                          @AuthenticationPrincipal Principal principal) {
@@ -307,15 +319,19 @@ public class LogResource {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, TextUtil.ATTACHMENT_DATA_INVALID);
         }
 
-        if (hasHeicFiles(files)) {
+        List<MultipartFile> multipartFiles;
+
+        try {
+            multipartFiles = checkSupportedAttachmentTypes(files);
+        } catch (IllegalArgumentException exception) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, TextUtil.ATTACHMENT_HEIC_NOT_SUPPORTED);
         }
 
         Log newLogEntry = createLog(clientInfo, markup, inReplyTo, logEntry, principal);
 
         if (files != null) {
-            for (int i = 0; i < files.length; i++) {
-                String originalFileName = files[i].getOriginalFilename();
+            for (MultipartFile multipartFile : multipartFiles) {
+                String originalFileName = multipartFile.getOriginalFilename();
                 Optional<Attachment> attachment =
                         logEntry.getAttachments().stream()
                                 .filter(a -> a.getFilename() != null && a.getFilename().equals(originalFileName)).findFirst();
@@ -323,8 +339,9 @@ public class LogResource {
                     logger.log(Level.WARNING, () -> MessageFormat.format(TextUtil.ATTACHMENT_FILE_NOT_MATCHED_META_DATA, originalFileName));
                     continue;
                 }
-                uploadAttachment(Long.toString(newLogEntry.getId()),
-                        files[i],
+
+                saveAttachment(Long.toString(newLogEntry.getId()),
+                        multipartFile,
                         originalFileName,
                         attachment.get().getId(),
                         attachment.get().getFileMetadataDescription());
@@ -348,11 +365,41 @@ public class LogResource {
      * @return The updated {@link Log}.
      */
     @PostMapping("/attachments/{logId}")
-    public Log uploadAttachment(@PathVariable String logId,
+    public Log uploadAttachment(@PathVariable(name = "logId") String logId,
                                 @RequestPart("file") MultipartFile file,
                                 @RequestPart("filename") String filename,
-                                @RequestPart(value = "id", required = false) String id,
-                                @RequestPart(value = "fileMetadataDescription", required = false) String fileMetadataDescription) {
+                                @RequestPart(name = "id", required = false) String id,
+                                @RequestPart(name = "fileMetadataDescription", required = false) String fileMetadataDescription) {
+
+        List<MultipartFile> multipartFiles;
+
+        try {
+            multipartFiles = checkSupportedAttachmentTypes(new MultipartFile[]{file});
+        } catch (IllegalArgumentException exception) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, TextUtil.ATTACHMENT_HEIC_NOT_SUPPORTED);
+        }
+        return saveAttachment(logId,
+                multipartFiles.getFirst(),
+                filename,
+                id,
+                fileMetadataDescription);
+    }
+
+    /**
+     * Saves the content of the {@link MultipartFile} to the database.
+     *
+     * @param logId                   The log id associated with the attachment
+     * @param file                    A {@link MultipartFile} representing the attachment contents
+     * @param filename                The file name as defined by the client, e.g. file name on disk.
+     * @param id                      A unique id for the attachment.
+     * @param fileMetadataDescription Description of the content
+     * @return A {@link Log} where the attachment field has been updated with the saved attachment.
+     */
+    private Log saveAttachment(String logId,
+                               MultipartFile file,
+                               String filename,
+                               String id,
+                               String fileMetadataDescription) {
         Optional<Log> foundLog = logRepository.findById(logId);
         if (logRepository.findById(logId).isPresent()) {
             filename = filename == null || filename.isEmpty() ? file.getName() : filename;
@@ -361,13 +408,11 @@ public class LogResource {
                     : fileMetadataDescription;
             Attachment attachment = new Attachment(id, file, filename, fileMetadataDescription);
             // Store the attachment
-            Attachment createdAttachement = attachmentRepository.save(attachment);
-            // Update the log entry with the id of the stored attachment
-            Log log = foundLog.get();
-            Set<Attachment> existingAttachments = log.getAttachments();
-            existingAttachments.add(createdAttachement);
-            log.setAttachments(existingAttachments);
-            return logRepository.update(log);
+            Attachment createdAttachment = attachmentRepository.save(attachment);
+            SortedSet<Attachment> existingAttachments = foundLog.get().getAttachments();
+            existingAttachments.add(createdAttachment);
+            foundLog.get().setAttachments(existingAttachments);
+            return logRepository.update(foundLog.get());
         } else {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, MessageFormat.format(TextUtil.LOG_NOT_RETRIEVED, logId));
         }
@@ -392,8 +437,8 @@ public class LogResource {
      */
     @SuppressWarnings("unused")
     @PostMapping("/{logId}")
-    public Log updateLog(@PathVariable String logId,
-                         @RequestParam(value = "markup", required = false) String markup,
+    public Log updateLog(@PathVariable(name = "logId") String logId,
+                         @RequestParam(name = "markup", required = false) String markup,
                          @RequestBody Log log,
                          @AuthenticationPrincipal Principal principal) {
 
@@ -427,6 +472,8 @@ public class LogResource {
             persistedLog.setLogbooks(log.getLogbooks());
             persistedLog.setTitle(log.getTitle());
             persistedLog = cleanMarkup(markup, persistedLog);
+
+            webSocketService.sendMessageToClients(new WebSocketMessage(MessageType.LOG_ENTRY_UPDATED, persistedLog.getId().toString()));
 
             return logRepository.update(persistedLog);
         } else {
@@ -482,13 +529,14 @@ public class LogResource {
 
     /**
      * {@link LogEntryNotifier} providers are called for the specified log entry. Since a provider
-     * implementation may need some time to do it's job, calling them is done asynchronously. Any
+     * implementation may need some time to do its job, calling them is done asynchronously. Any
      * error handling or logging has to be done in the {@link LogEntryNotifier}, but exceptions are
      * handled here in order to not abort if any of the providers fails.
      *
      * @param log The log entry
      */
     private void sendToNotifiers(Log log) {
+
         if (logEntryNotifiers.isEmpty()) {
             return;
         }
@@ -514,29 +562,6 @@ public class LogResource {
         return log;
     }
 
-    /**
-     * Endpoint supporting upload of multiple files, i.e. saving the client from sending one POST request per file.
-     * Calls {@link #uploadAttachment(String, MultipartFile, String, String, String)} internally, using the original file's
-     * name and content type.
-     *
-     * @param logId A (numerical) id of a {@link Log}
-     * @param files The files subject to upload.
-     * @return The persisted {@link Log} object.
-     */
-    @SuppressWarnings("unused")
-    @PostMapping(value = "/attachments-multi/{logId}", consumes = "multipart/form-data")
-    @Deprecated
-    public Log uploadMultipleAttachments(@PathVariable String logId,
-                                         @RequestPart("file") MultipartFile[] files) {
-        if (logRepository.findById(logId).isPresent()) {
-            for (MultipartFile file : files) {
-                uploadAttachment(logId, file, file.getOriginalFilename(), file.getName(), file.getContentType());
-            }
-            return logRepository.findById(logId).get();
-        } else {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, MessageFormat.format(TextUtil.LOG_NOT_RETRIEVED, logId));
-        }
-    }
 
     /**
      * This will retrieve {@link Property}s from {@link LogPropertyProvider}s, if any are registered
@@ -565,7 +590,7 @@ public class LogResource {
                 completableFutures.stream()
                         .filter(future -> future.isDone() && !future.isCompletedExceptionally())
                         .map(CompletableFuture::join)
-                        .collect(Collectors.toList());
+                        .toList();
 
         providedProperties.forEach(property -> {
             if (property != null && !propertyNames.contains(property.getName())) {
@@ -595,8 +620,8 @@ public class LogResource {
      *
      * @param originalLogEntryId The (Elastic) id of the log entry user wants to reply to.
      * @param log                The contents of the reply entry.
-     * @throws {@link ResponseStatusException} if <code>originalLogEntryId</code> does not identify an
-     *                existing log entry. This will result in the client receiving a HTTP 400 status.
+     * @throws ResponseStatusException if <code>originalLogEntryId</code> does not identify an
+     *                                 existing log entry. This will result in the client receiving a HTTP 400 status.
      */
     private void handleReply(String originalLogEntryId, Log log) {
         try {
@@ -620,46 +645,135 @@ public class LogResource {
     }
 
     /**
-     * Checks for heic(s) file extension on the original file name.
-     * If a {@link MultipartFile} file does not specify an original file name,
-     * it cannot be evaluated and is then not considered to be a heic file.
-     *
-     * <p>
-     * Ideally Apache Tika should be used to detect heic content.
-     * </p>
-     *
-     * @param files Array of {@link MultipartFile}s to check.
-     * @return <code>true</code> if heic(s) file is detected, otherwise <code>false</code>.
-     */
-    private boolean hasHeicFiles(MultipartFile[] files) {
-        if (files == null || files.length == 0) {
-            return false;
-        }
-        return Arrays.stream(files).filter(f ->
-                (f.getOriginalFilename() != null &&
-                        (f.getOriginalFilename().toLowerCase().endsWith(".heic") || f.getOriginalFilename().toLowerCase().endsWith(".heics")))).findFirst().isPresent();
-    }
-
-    /**
      * GET method for retrieving an RSS feed of channels.
      *
+     * @param allRequestParams Client's request parameters, may be <code>null</code>
+     * @param request          {@link HttpServletRequest} from which to construct base URL.
      * @return the name of the RSS feed view, which will be resolved to render the feed
      */
     @GetMapping(path = "/rss", produces = "application/rss+xml")
-    public com.rometools.rome.feed.rss.Channel getRssFeed(HttpServletRequest request) {
+    public com.rometools.rome.feed.rss.Channel getRssFeed(@RequestParam MultiValueMap<String, String> allRequestParams, HttpServletRequest request) {
         String baseUrl = request.getScheme() + "://" + request.getServerName() + ":" + request.getServerPort() + "/" + request.getContextPath();
-        MultiValueMap<String, String> baseParams = new LinkedMultiValueMap<>();
-        Instant now = Instant.now();
-        baseParams.set("end", MILLI_FORMAT.format(now));
-        baseParams.set("start",  MILLI_FORMAT.format(now.minus(Duration.ofDays(7))));
-        baseParams.set("from", "0");
-        baseParams.set("size", "100");
+        if (allRequestParams == null) {
+            allRequestParams = new LinkedMultiValueMap<>();
+        }
 
-        SearchResult searchResult = logRepository.search(baseParams);
-        if (searchResult != null ) {
+        Instant now = Instant.now();
+        if (allRequestParams.get("start") == null || allRequestParams.get("start").isEmpty()) {
+            allRequestParams.put("start", List.of(DateTimeFormatter.ofPattern(MILLI_PATTERN).withZone(ZoneId.systemDefault()).format(now.minus(Duration.ofDays(7)))));
+        }
+        if (allRequestParams.get("end") == null || allRequestParams.get("end").isEmpty()) {
+            allRequestParams.put("end", List.of(DateTimeFormatter.ofPattern(MILLI_PATTERN).withZone(ZoneId.systemDefault()).format(now)));
+        }
+        if (allRequestParams.get("from") == null || allRequestParams.get("from").isEmpty()) {
+            allRequestParams.put("from", List.of("0"));
+        }
+        if (allRequestParams.get("size") == null || allRequestParams.get("size").isEmpty()) {
+            allRequestParams.put("size", List.of("100"));
+        }
+
+        Object result = search(request.getHeader("User-Agent"), allRequestParams).getBody();
+
+        if (result instanceof SearchResult searchResult) {
             return RssFeedUtil.fromLogEntries(searchResult.getLogs(), baseUrl);
         } else {
             throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Failed to find entries");
         }
     }
+
+    /**
+     * For each {@link MultipartFile} in the provided list, this method will check the type of attachment in order
+     * to be able to reject unsupported types (e.g. HEIC image files). As it operates on the {@link InputStream} provided
+     * through a {@link MultipartFile}, and in order to be able to consume that stream again when saving to
+     * the attachments database, the original {@link MultipartFile} is cloned to a new one where the {@link InputStream}
+     * is wrapped in a {@link BufferedInputStream}.
+     * <p>
+     * The analysis of content type is delegated to Apache Tika. If an unsupported content type is encountered,
+     * this methid throws an {@link IllegalArgumentException}.
+     * </p>
+     *
+     * @param multipartFiles Array of {@link MultipartFile}s from client as intercepted by the endpoint.
+     * @return A {@link List} of {@link MultipartFile}s where the {@link InputStream} can be consumed again.
+     * @throws IllegalArgumentException if an unsupported content type is encontered.
+     *
+     */
+    protected List<MultipartFile> checkSupportedAttachmentTypes(MultipartFile[] multipartFiles) {
+        if (multipartFiles == null || multipartFiles.length == 0) {
+            return null;
+        }
+
+        List<MultipartFile> attachmentFiles = new ArrayList<>();
+        for (MultipartFile multipartFile : multipartFiles) {
+            try {
+                Metadata metadata = new Metadata();
+                metadata.add(TikaCoreProperties.RESOURCE_NAME_KEY, multipartFile.getName());
+                InputStream inputStream = new BufferedInputStream(multipartFile.getInputStream());
+                org.apache.tika.mime.MediaType mediaType = detector.detect(inputStream, metadata);
+                String type = mediaType.getBaseType().toString().toLowerCase();
+                if (type.contains("heic") || type.contains("heif")) {
+                    throw new IllegalArgumentException("Encountered HEIC file in attachments upload");
+                }
+                attachmentFiles.add(new OlogMultipartFile(multipartFile, inputStream));
+            } catch (IOException e) {
+                logger.log(Level.WARNING, "Failed to read multipart file stream or determine file content", e);
+                throw new RuntimeException(e);
+            }
+        }
+        return attachmentFiles;
+    }
+
+    /**
+     * A {@link MultipartFile} implementation with the purpose of providing a custom {@link InputStream}.
+     */
+    private static final class OlogMultipartFile implements MultipartFile {
+
+        private final MultipartFile originalMultipartFile;
+        private final InputStream inputStream;
+
+        public OlogMultipartFile(MultipartFile originalMultipartFile, InputStream inputStream) {
+            this.originalMultipartFile = originalMultipartFile;
+            this.inputStream = inputStream;
+        }
+
+        @Override
+        public String getName() {
+            return originalMultipartFile.getName();
+        }
+
+        @Override
+        public String getOriginalFilename() {
+            return originalMultipartFile.getOriginalFilename();
+        }
+
+        @Override
+        public String getContentType() {
+            return originalMultipartFile.getContentType();
+        }
+
+        @Override
+        public boolean isEmpty() {
+            return originalMultipartFile.isEmpty();
+        }
+
+        @Override
+        public long getSize() {
+            return originalMultipartFile.getSize();
+        }
+
+        @Override
+        public byte[] getBytes() throws IOException {
+            return originalMultipartFile.getBytes();
+        }
+
+        @Override
+        public InputStream getInputStream() throws IOException {
+            return inputStream;
+        }
+
+        @Override
+        public void transferTo(File dest) throws IOException, IllegalStateException {
+            originalMultipartFile.transferTo(dest);
+        }
+    }
+
 }
